# ndsrecomp

./: .gitignore  Makefile  Makefile.libnds  README.md  baserom.sha1  ndsrecomp.py  objdiff.json
source/: main.c
template/: CMakeLists.txt  compile.sh  start.sh
template/LICENSES/: libnds_license.txt
template/src/: arm9_recomp.h  easygl2d.c  easygl2d.h  main.c  nds_gpu.c  nds_gpu.h  nds_runtime.c  nds_runtime.h  nds_video.c  nds_video.h  rom_data.h
tools/: ndsrecomp.py
tools/template/: CMakeLists.txt
tools/template/LICENSES/: libnds_license.txt
tools/template/src/: easygl2d.c  easygl2d.h  main.c  nds_runtime.c  nds_video.c
